# soundcloud-dl-v2

./: .env  Cargo.toml  README.md  bun.lockb  package.json
src/: App.svelte  main.rs  prompt.rs  sc.rs  soundcloud.rs  types.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  types.rs
