[package]
name = "soundcloud-dl-v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.7"
dialoguer = "0.11.0"
id3 = "1.10.0"
indicatif = "0.17.7"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.50"
tokio = { version = "1.35.0", features = ["full"] }
